# LUDataLiteracy

./: .gitignore  1_DataViz.qmd  1_DataViz_sol.qmd  2_DataViz_wrangling.qmd  2_DataViz_wrangling_sol.qmd  3_Wrangling_GT.qmd  3_Wrangling_GT_sol.qmd  4_Wrangling_joins.qmd  4_Wrangling_joins_sol.qmd  5_Pivots_GT.qmd  5_Pivots_GT_sol.qmd  6_Quarto.qmd  Ames_houses.qmd  Ames_schools.qmd  CIA.qmd  KingsCounty.qmd  README.md  Tutorial_1_DataViz.qmd  Utrecht.qmd  _quarto.yml  about.qmd  index.qmd  main.py  pyproject.toml
brand/: _brand.yml
data/: ames_houses.csv  ames_houses_dict.csv  ames_schools.csv  ames_schools_dict.csv  cia_area_data_dictionary.csv  cia_commtran_data_dictionary.csv  cia_ecosec_data_dictionary.csv  cia_enenv_data_dictionary.csv  cia_pplsoc_data_dictionary.csv  factbook_area_2024.csv  factbook_comm_transport_2024.csv  factbook_economy_security_2024.csv  factbook_energy_environment_2024.csv  factbook_gdp_consump.csv  factbook_gdp_consump_rawtxt.csv  factbook_people_society_2024.csv  kc_house_data.csv  kc_house_data_dictionary.csv  merge_districts.R  utrecht_2025.csv
docs/: 1_DataViz.html  1_DataViz_sol.html  2_DataViz_wrangling.html  2_DataViz_wrangling_sol.html  3_Wrangling_GT.html  3_Wrangling_GT_sol.html  4_Wrangling_joins.html  4_Wrangling_joins_sol.html  5_Pivots_GT.html  5_Pivots_GT_sol.html  6_Quarto.html  Ames_houses.html  Ames_schools.html  CIA.html  KingsCounty.html  Tutorial_1_DataViz.html  Utrecht.html  about.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-4a65af601ebb7923055384dba408bd6e.min.css  (+3 more)
