[project]
name = "ludataliteracy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gapminder>=0.1",
    "great-tables>=0.18.0",
    "plotnine>=0.15.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
]
